@@ -1,10 +1,14 @@
-2009-xx-xx Andreas Radke <andyrtr at archlinux.org>
+2009-10-25 Andreas Radke <andyrtr at archlinux.org>
 
         * 3.2_dev300_m62-1:
 	- new snapshot
+	- use mercurial for checkouts
 	- readd missing lucene dependency
 	- make it provide openoffice-en-US
 	- modify pkgdesc for devel branch
+	- install all built extensions
+	# sun-report-builder.oxt and
+	# wiki-publisher.oxt installation is still broken
 
 2009-10-08 Andreas Radke <andyrtr at archlinux.org>
 
